PROJECT(VoiSeg)

FIND_PACKAGE(ITK REQUIRED)

IF(ITK_FOUND)
	INCLUDE(${ITK_USE_FILE})
ELSE(ITK_FOUND)
	MESSAGE(FATAL_ERROR"ITK not found. Please set ITK_DIR.")
ENDIF(ITK_FOUND)

SET(APPLICATION_SRC 
	VoiSeg.cxx)

ADD_EXECUTABLE( VoiSeg ${APPLICATION_SRC})

SET(ITK_LIBRARIES
	ITKBasicFilters
	ITKCommon 
	ITKIO 
	ITKStatistics
 	ITKNumerics
)

TARGET_LINK_LIBRARIES ( VoiSeg ${ITK_LIBRARIES})	